Update fix #1